--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -83,7 +83,7 @@
             <span class="h5 mg-right-5">Tags:</span>
             {{range .Timeslot.Tags}}
             <a href="/search?term={{.}}" alt="Search for '{{.}}'.">
-              <span class="badge badge-secondary">{{.}}</span>
+              <span class="badge badge-secondary tag">{{.}}</span>
             </a>
             {{end}}
           </div>
