--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -104,3 +104,13 @@ $breakpoints: sm, md, lg, xl;
     max-width: 1400px;
   }
 }
+
+.tag {
+  transition: 350ms;
+
+  &:hover {
+    transform: scale(1.08);
+    color: #868e96;
+    background-color: #ffffff;
+  }
+}
