Removed button border

--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -1,6 +1,7 @@
 $button-color: #fff;
 
 .btn {
+  border: none;
   border-radius: .4em;
   padding: .25em 1em;
   font-family: $font-family-heading;
@@ -61,7 +62,7 @@ $button-color: #fff;
   &.listen-btn {
     display: table;
     border-radius: .4em .4em 0 0;
-    box-shadow: 0px 1px 1px 1px rgba(0,0,0, 0.33);
+    box-shadow: 1px 1px 0px 1px rgba(0,0,0, 0.33);
     position: absolute;
     bottom: 0;
     right: 1em;
