Automatically update now and next. (#145)
* Need full jquery for Ajax.

* Basic updating now & next.

* Add (en/dis)abling of message box
(untested)

* Add basic "Jump to current show" functionality
Soon to be tied into the auto-updating

* Make C&N and jumping to a show in schedule more robust

* Have jump button appear only on this week

* Added emphasis animation after scroll link
Turns out this isn't at all related to C&N anymore. whoops.

* Import C&N JS with the template

* Make C&N update just after the half hour

* Honestly codacy, the one time I want you to chastise me

* The great appeasement
Also fix jump to current show when nothing's on air

* The second great appeasement

* Silly useless semicolons

* Run JS beautifier and change text to match the Go output

* Beautify and fix variable re-use

* Differentiate public API key
Added new API key to database with required permissions
(required permissions being literally none)

* Change text again so it fits in the box; minor appeasement

* Fix empty lines / lack of; center jump button

* Fix now next update scheduling

* Fix Semicolon

* Fix hours to 2 digits too (to match HTML)

* Remove extra line.

* Remove empty line.

* Remove another new line.

* Update for accessibility PR changes.

* Fixes for #187

* Few more html fixes.

* (Hopefully) fix Codacy

* Fix Variable Assigned to Object Injection Sink

--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -8,6 +8,8 @@ $shadow: rgba(0, 0, 0, 0.5);
   color: $black;
   text-decoration: none !important; // scss-lint:disable ImportantRule
   opacity: 0.5;
+  position: absolute;
+  right: 10px;
 
   &:hover {
     opacity: 1;
@@ -165,8 +167,6 @@ $sustainer-color: tint($primary-color, 40%);
 }
 
 .schedule-keys .key-row {
-
-
   * {
     display: inline-block;
   }
@@ -174,15 +174,13 @@ $sustainer-color: tint($primary-color, 40%);
 
 @include media-breakpoint-down(md) {
   .schedule-keys .key-row {
-
-
     .h5, .h6 {
       display: block;
       margin-top: 10px;
     }
-
   }
 }
+
 @include media-breakpoint-down(sm) {
   .current-next.mobile-shrink {
     height: unset;
@@ -190,12 +188,10 @@ $sustainer-color: tint($primary-color, 40%);
   }
   .schedule-keys .key-row {
     text-align: left;
-
     .h5, .h6 {
       display: block;
       margin-top: 10px;
     }
-
   }
   .schedule-table {
     display: table;
