--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -1,14 +1,15 @@
 {{define "current_and_next"}}
+<script src='{{url "/js/currentAndNext.js"}}'></script>
 {{with .CurrentAndNext}}
 <div class="current-and-next row justify-content-center">
   {{if .Current}}
   <div class="col-5 col-sm-3 col-md-2 p-0 current-and-next-img">
     <img src="
-    {{if .Current.Photo}}
+    {{- if .Current.Photo -}}
       //ury.org.uk{{.Current.Photo}}
-    {{else}}
+    {{- else -}}
       {{url "/images/show-current.png"}}
-    {{end}}
+    {{- end -}}
     " alt="{{.Current.Title}} Logo" />
   </div>
   <div class="col-7 col-sm-9 col-md-5 p-0 m-0">
@@ -49,8 +50,8 @@
 </div>
 {{end}}
 {{end}}
-
 {{define "current_next"}}
+<div class="template-box">
 {{if .Title}}
 <h3 class="show-title ellipsis">
   {{.Title}}
@@ -66,6 +67,8 @@
   {{end}}
 </h4>
 {{else}}
-<span>Looks like there is nothing coming up next yet.</span>
+<span>Looks like there is nothing on here.</span>
 {{end}}
+</div>
 {{end}}
+
