--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -1,7 +1,7 @@
 $button-color: #fff;
 
 .btn {
-  border: none;
+  border: 0;
   border-radius: .4em;
   padding: .25em 1em;
   font-family: $font-family-heading;
@@ -56,18 +56,18 @@ $button-color: #fff;
   &.btn-xl {
     border-radius: .3em;
     font-size: 2rem;
-    padding: .8rem 1.5rem;
+    padding: 0.8rem 1.5rem;
   }
 
   &.listen-btn {
     display: table;
-    border-radius: .4em .4em 0 0;
-    box-shadow: 1px 1px 0px 1px rgba(0,0,0, 0.33);
+    border-radius: 0.4em 0.4em 0 0;
+    box-shadow: 1px 1px 0 1px rgba(0, 0, 0, 0.33);
     position: absolute;
     bottom: 0;
     right: 1em;
     margin: 0 0 0 auto;
-    padding: .25em .5em;
+    padding: 0.25em 0.5em;
   }
 
 }
