More codacy fixes

--- a/sass/base/_backgrounds.scss
+++ b/sass/base/_backgrounds.scss
@@ -51,11 +51,11 @@
 
 .bg-sessions {
   background: desaturate($music-purple, 20%);
-  color: $white
+  color: $white;
 }
 
 .bg-podcasts {
-  background: $computing_grey;
+  background: $computing-grey;
   color: $white;
 }
 
