--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -62,13 +62,28 @@ $button-color: #fff;
   $listen-shadow: rgba(0, 0, 0, 0.33);
 
   &.listen-btn {
+    transition-duration: 0.3s;
     border-radius: 0.4em 0.4em 0 0;
-    box-shadow: 1px 1px 0 1px $listen-shadow;
+    box-shadow:  0px 1px 1px 1px $listen-shadow;
     position: absolute;
     bottom: 0;
     right: 1em;
     margin: 0 0 0 auto;
     padding: 0.25em 0.5em;
+  }
+
+  &.listen-btn-animated {
+    transition-duration: 0.3s;
+    border-radius: 0.4em 0.4em 0 0;
+    box-shadow:  0px 1px 1px 1px $listen-shadow;
+    position: absolute;
+
+    right: 1em;
+    margin: 0 0 0 auto;
+    padding: 0.25em 0.5em;
+    padding-bottom: 50px;
+
+    bottom: calc(-50px + 0.5em);
   }
 
 }
