--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -73,16 +73,8 @@ $button-color: #fff;
   }
 
   &.listen-btn-animated {
-    transition-duration: 0.3s;
-    border-radius: 0.4em 0.4em 0 0;
-    box-shadow:  0px 1px 1px 1px $listen-shadow;
-    position: absolute;
-
-    right: 1em;
-    margin: 0 0 0 auto;
-    padding: 0.25em 0.5em;
+    @extend .listen-btn;
     padding-bottom: 50px;
-
     bottom: calc(-50px + 0.5em);
   }
 
