use animated button on current-next

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -29,15 +29,13 @@
           {{- if ge .PageData.ODState 3 -}}: Listen Again{{end}}
         </h2>
         {{if eq .PageData.ODState 1}}
-          <h3>This show starts on {{.PageData.Timeslot.StartTime.Format "Monday, _2 Jan 2006 at 15:04"}}.</h3>
-          <p class="h5">Just can't wait? Check out previous shows <a href="{{.PageData.Timeslot.Season.ShowMeta.MicroSiteLink.URL}}">{{.PageContext.ODName -}}...</a></p>
+        <h3 class="float-lg-left">This show is on right now!</h3>
+        <a href="https://ury.org.uk/listen" class="btn btn-red listen-btn float-lg-right" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">
+          <i class="fa fa-volume-up mr-2"></i>Listen Live
+        </a>
+      <br><br>
+      <p class="float-lg-left h5">Missed the start? Check out previous shows while you wait, <a href="{{.PageData.Timeslot.Season.ShowMeta.MicroSiteLink.URL}}">{{.PageContext.ODName}}...</a></p>
         {{else if eq .PageData.ODState 2}}
-          <h3 class="float-lg-left">This show is on right now!</h3>
-            <a href="https://ury.org.uk/listen" class="btn btn-xl btn-red listen-btn float-lg-right" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">
-              <i class="fa fa-volume-up mr-2"></i>Listen Live
-            </a>
-          <br><br>
-          <p class="float-lg-left h5">Missed the start? Check out previous shows while you wait, <a href="{{.PageData.Timeslot.Season.ShowMeta.MicroSiteLink.URL}}">{{.PageContext.ODName}}...</a></p>
         {{else if eq .PageData.ODState 3}}
           <h3>This show is being processed, it should be available soon!</h3>
           <p class="h5">Just can't wait? Check out previous shows <a href="{{.PageData.Timeslot.Season.ShowMeta.MicroSiteLink.URL}}">{{.PageContext.ODName -}}...</a></p>
