fix codeacy issues

--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -61,10 +61,10 @@ $button-color: #fff;
 
   $listen-shadow: rgba(0, 0, 0, 0.33);
 
-  &.listen-btn {
+  %listen-btn-defaults {
     transition-duration: 0.3s;
     border-radius: 0.4em 0.4em 0 0;
-    box-shadow:  0px 1px 1px 1px $listen-shadow;
+    box-shadow: 0 1px 1px 1px $listen-shadow;
     position: absolute;
     bottom: 0;
     right: 1em;
@@ -72,8 +72,12 @@ $button-color: #fff;
     padding: 0.25em 0.5em;
   }
 
+  &.listen-btn {
+    @extend %listen-btn-defaults;
+  }
+
   &.listen-btn-animated {
-    @extend .listen-btn;
+    @extend %listen-btn-defaults;
     padding-bottom: 50px;
     bottom: calc(-50px + 0.5em);
   }
