--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -19,7 +19,7 @@
 
 <!-- schedule header -->
 <div class="container-fluid bg-off-white">
-  <div class="container justify-content-between p-3">
+  <div class="container justify-content-between py-3">
     <div class="row">
       <div class="col-auto">
         <h1 class="display-4 mobile-hide">Schedule <a class="fa fa-key schedule-key-icon" href="#key"></a></h1>
