make button for listen live normal sized

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -33,7 +33,7 @@
           <p class="h5">Just can't wait? Check out previous shows <a href="{{.PageData.Timeslot.Season.ShowMeta.MicroSiteLink.URL}}">{{.PageContext.ODName -}}...</a></p>
         {{else if eq .PageData.ODState 2}}
           <h3 class="float-lg-left">This show is on right now!</h3>
-            <a href="https://ury.org.uk/listen" class="btn btn-xl btn-red listen-btn float-lg-right" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">
+            <a href="https://ury.org.uk/listen" class="btn btn-red listen-btn float-lg-right" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">
               <i class="fa fa-volume-up mr-2"></i>Listen Live
             </a>
           <br><br>
