--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -40,20 +40,15 @@
 <div class="container-fluid container-padded ">
   <div class="container container-padded">
       <h2>What Can I Do?</h2>
-      <p>Of course, everyone wants to be on the radio! Presenting is as easy as baking a cake (disclaimer: I can't bake cakes) and you don't have to sign up at Freshers' Fair or at the start of a term to get your very own show! Just take a look at our <a href="/schedule" title="The URY Schedule">schedule</a>, if you can see a gap, there's no reason you couldn't fill it!</p>
-      <p>As well as presenting, URY also has {{.NumTeams}} teams of students which look after all aspects of running a radio station. Whether that be creating the content or maintaining the station. To find out more about our teams, and what each entails, please go to the <strong><a href="{{url "/teams"}}" title="Have a look at what our teams do!">teams</a></strong> page.</p>
+      <p>There’s something for everyone at URY! You don’t have to sign up at Freshers’ Fair or at the start of a term to get your very own show, or join any of our amazing teams:</p>
+      <p>- If you want to present or produce radio, DJ, or record a podcast, we have brand new industry standard studios</p>
+      <p>- If you want to get involved with broadcast or sound <a href="{{url "/teams/engineering/"}}" title="Have a look at what the engineering team does!"> engineering</a>,It  we do lots of live events and also maintain our own studios all year round</p>
+      <p>- If you’re interested in <a href="{{url "/teams/audio/"}}" title="Have a look at what the audio resources team does!">audio production</a>, we record sessions with local artists and design all of our own station sound</p>
+      <p>- If you’re keen to develop your <a href="{{url "/teams/marketing/"}}" title="Have a look at what the marketing team does!">marketing skills</a>, we have social media accounts with thousands of followers and a national award nominated brand</p>
+      <p>- If you want to try out web design or <a href="{{url "/teams/computing/"}}" title="Have a look at what the computing team does!">software engineering</a>, our website and backpages are designed and run in house</p>
+      <p>- Plus, if you want to <a href="{{url "/teams/news/"}}" title="Have a look at what the news and sport team does!">commentate on sport, learn to news read</a>, chat about <a href="{{url "/teams/music/"}}" title="Have a look at what the music team does!">music</a>, or wax lyrical about <a href="{{url "/teams/speech/"}}" title="Have a look at what the speech team does!">theatre, culture and the arts</a>, there’s content teams for you too!</p>
+  
   </div>
-</div>
-<div class="container-fluid container-padded  bg-primary">
-  <div class="container container-padded">
-      <h2>How Do I Get A Show?</h2>
-      <div> {{/* Prevents bug where p would appear inline with h2 */}}
-        <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through the <a href="//www.yusu.org/groups/university-radio-york/" title="York University Students Union" target="_blank">YUSU website</a>.</p>
-        <p>Once you have paid, you will need to create a <a href="//ury.org.uk/myradio">MyRadio</a> account, from there you will be able to sign up to training! Under the "Get On Air" section, then click "Get Studio Trained" and take your pick of training sessions, click join and you are good to go! If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.</p>
-        <p>During training, we will show you how to use the studio and how to apply for a show. Shows are typically one hour long, scheduled once a week.</p>
-        <p><strong>Easy peasy!</strong></p>
-    </div>
-    </div>
 </div>
 <div class="container-fluid container-padded  bg-secondary">
   <div class="container container-padded">
@@ -62,7 +57,7 @@
         <p>If you’re ready to join URY right now, we have some very easy steps to get you started...</p>
         <dl>
           <dt>Pay Membership</dt>
-          <dd>The easiest way to pay membership is through the <a href="//yusu.org/groups/university-radio-york/" target="_blank">yusu.org</a> website.</dd>
+          <dd>The easiest way to pay membership is through the <a href="//yusu.org/activities/view/university-radio-york" target="_blank">yusu.org</a> website.</dd>
           <dt>Sign Up To MyRadio</dt>
           <dd>MyRadio is our computer system for managing shows, members, and our mailing list. You can join MyRadio by completing the form below, it’s instant and of course there’s no commitment to do anything.</dd>
           <dt>Join Our Slack Team</dt>
@@ -71,6 +66,16 @@
         <p>You can also come and <a href="{{url "/contact#map"}}" title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
       </div>
   </div>
+</div>
+<div class="container-fluid container-padded  bg-primary">
+  <div class="container container-padded">
+      <h2>How Do I Get A Show or Podcast?</h2>
+      <div> {{/* Prevents bug where p would appear inline with h2 */}}
+        <p>Getting your own show or podcast is really easy! Just take a look at our <a href="/schedule" title="The URY Schedule">schedule</a>, if you can see a gap, there's no reason you couldn't fill it!</p>
+        <p>Once you have completed the steps above, you will be able to sign up to training! In <a href="//ury.org.uk/myradio">MyRadio</a> head to the "Get On Air" section, then click "Get Studio Trained" and take your pick of training sessions, click join and you are good to go! If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.</p>
+        <p>During training, we will show you how to use the studio and how to apply for a show or podcast. If you want to brainstorm ideas with our team, then head to <a href="{{url "/teams/presenting/"}}" title="Have a look at what the presenting and production team does!">Production</a> Meeting, which is at 8pm every Monday in V/N/123a!</p>
+    </div>
+    </div>
 </div>
 <div class="container-fluid container-padded bg-third" id="signUp">
   <div class="container container-padded">
