--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -71,9 +71,9 @@
           <h3>URY Website</h3>
           <p>You can listen to us live through <a target="_blank" href="//ury.org.uk/live" title="Click to listen live.">radioplayer</a> (recommended), or via one of our streams:</p>
           <ul>
-            <li><a target="_blank" href="//ury.org.uk/audio/live-high" title="Listen to URY's High Quality stream (192kb/s).">High Quality (192 kb/s MPEG)</a></li>
-            <li><a target="_blank" href="//ury.org.uk/audio/live-high-ogg" title="Listen to URY's High Quality (OGG) stream (128kb/s).">High Quality OGG (128 kb/s OGG)</a></li>
-            <li><a target="_blank" href="//ury.org.uk/audio/live-mobile" title="Listen to URY's Mobile Quality stream (48kb/s).">Mobile Quality (48 kb/s MPEG)</a></li>
+            <li><a target="_blank" href="http://audio.ury.org.uk/live-high" title="Listen to URY's High Quality stream (192kb/s).">High Quality (192 kb/s MPEG)</a></li>
+            <li><a target="_blank" href="http://audio.ury.org.uk/live-high-ogg" title="Listen to URY's High Quality (OGG) stream (128kb/s).">High Quality OGG (128 kb/s OGG)</a></li>
+            <li><a target="_blank" href="http://audio.ury.org.uk/live-mobile" title="Listen to URY's Mobile Quality stream (48kb/s).">Mobile Quality (48 kb/s MPEG)</a></li>
           </ul>
           <h3>Alexa</h3>
           <p>We are also on TuneIn which means you can listen to us via any Alexa devices, simply say “Alexa… Play University Radio York”.</p>
