--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -114,7 +114,7 @@
       <div class="col-md-6 col-lg-6">
         <h2>2019</h2>
         <ul>
-          <li>Gold Best Student Chart Show (<a href="{{url="/schedule/shows/timeslots/146075/">URY's Entry</a>)</li>
+          <li>Gold Best Student Chart Show (<a href="{{url "/schedule/shows/timeslots/146075/">URY's Entry</a>)</li>
           <li>Gold Best Newcomer (<a href="{{url "/people/10756"}}">Joseph Morrall</a>)</li>
           <li>Gold Best Female (<a href="{{url "/people/10058"}}">Hannah Sackville-Bryant</a>)</li>
           <li>Silver Best Technical (Building Homebrew Studio Infrastructure)</li>
