Correct quotes for URL.

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -62,7 +62,7 @@
         {{if .Timeslot.Season.ShowMeta.Photo}}
         https://ury.org.uk{{.Timeslot.Season.ShowMeta.Photo}}
         {{else}}
-        {{url '/images/default_show_profile.png'}}
+        {{url "/images/default_show_profile.png"}}
         {{end}}"
         alt="{{.Timeslot.Title}} Logo">
         <div class="row">
