--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -33,7 +33,7 @@
             {{- if .Season.ShowMeta.Photo -}}
             https://ury.org.uk{{.Season.ShowMeta.Photo}}
             {{- else -}}
-              {{url '/images/default_show_profile.png'}}
+              {{url "/images/default_show_profile.png"}}
             {{- end -}}');
           " title="{{.Title}} Logo"></div>
         <div class="ury-card-body">
