Singular default image and remove old images. (#189)
* Singular default image and remove old images.

* A couple of image {{urls}}

* Update podcasts to use {{URL}}

* Use {{url}} for show images.

* Update podcasts imgs {{url}}

* Correct quotes for URL.

--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -8,7 +8,7 @@
     {{- if .Current.Photo -}}
       //ury.org.uk{{.Current.Photo}}
     {{- else -}}
-      {{url "/images/show-current.png"}}
+      {{url "/images/default_show_profile.png"}}
     {{- end -}}
     " alt="{{.Current.Title}} Logo" />
   </div>
