--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -110,7 +110,7 @@
   {{else}}
     <div class="row justify-content-center p-5">
       <div class="col-12 col-lg-8 p-5 text-center schedule-block-regular disabled">
-        <h3>There's nothing on for this week.</p>
+        <h3>There's nothing on for this week.</h3>
         <h4>We're most likely off air, or we haven't scheduled it yet!</h4>
       </div>
     </div>
