--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -36,13 +36,9 @@
         </div>
         <div class="schedule-keys collapse">
           <div class="key-row">
-            <span class="schedule-block-regular">Regular</span>
-            <span class="schedule-block-primetime">Primetime</span>
-            <span class="schedule-block-event">Events</span>
-            <span class="schedule-block-news">News</span>
-            <span class="schedule-block-speech">Speech</span>
-            <span class="schedule-block-music">Music</span>
-            <span class="schedule-block-collab">Collaboration</span>
+              {{ range .Subtypes }}
+                <span class="schedule-block-{{.Class}}">{{.Name}}</span>
+              {{end}}
           </div>
         </div>
       </div>
@@ -115,24 +111,20 @@
       </div>
     </div>
   {{end}}
+  {{end}}
   <br>
     <div class="row justify-content-center pb-3">
         <div class="schedule-keys" id="key">
           <div class="key-row">
             <h2 class="inline">Schedule Key:</h2>
-            <span class="schedule-block-regular">Regular</span>
-            <span class="schedule-block-primetime">Primetime</span>
-            <span class="schedule-block-event">Events</span>
-            <span class="schedule-block-news">News</span>
-            <span class="schedule-block-speech">Speech</span>
-            <span class="schedule-block-music">Music</span>
-            <span class="schedule-block-collab">Collaboration</span>
+            {{ range .Subtypes }}
+              <span class="schedule-block-{{.Class}}">{{.Name}}</span>
+            {{end}}
           </div>
         </div>
     </div>
   </div>
 </div>
-{{end}}
 {{end}}
 {{end}}
 {{define "footer-scripts"}}
