Change Alexa to Smart Speakers
Proposing a change of wording... 

The common way to refer to this is Smart Speakers, I am proposing a reword to make it more generic and not alienate Google.

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -75,8 +75,8 @@
             <li><a target="_blank" href="//audio.ury.org.uk/live-high-ogg" title="Listen to URY's High Quality (OGG) stream (128kb/s).">High Quality OGG (128 kb/s OGG)</a></li>
             <li><a target="_blank" href="//audio.ury.org.uk/live-mobile" title="Listen to URY's Mobile Quality stream (48kb/s).">Mobile Quality (48 kb/s MPEG)</a></li>
           </ul>
-          <h3>Alexa</h3>
-          <p>We are also on TuneIn which means you can listen to us via any Alexa devices, simply say “Alexa… Play University Radio York”.</p>
+          <h3>Smart Speakers</h3>
+          <p>We are also on TuneIn which means you can listen to us via most smart speakers, simply say “Play University Radio York”.</p>
           <h3>iTunes Internet Radio</h3>
           <p>We are available on iTunes Radio: <br>Internet Radio -> College/University -> ((URY)) - University Radio York</p>
       </div>
