--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -3,7 +3,7 @@
 <h2>Send a Message</h2>
 <hr>
 <form id="studiomessage" action="/" method="post">
-  <textarea class="form-control" id="comments" name="message" rows="4" placeholder=
+  <textarea class="form-control" id="comments" name="message" rows="4" maxlength="1000" placeholder=
   {{if .MsgBoxError}}
   	"Message cannot be sent at this time, please try again later."
   {{else if not .ShowOnAir}}
@@ -11,6 +11,7 @@
   {{else}}
   	"Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"
   {{end}}></textarea>
+  <p id="charcount"></p>
   <button id="messagesend"  class="btn btn-primary btn-block" type="submit" value="SEND MESSAGE"
   {{if not .ShowOnAir}}
   	disabled
