--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "fonts";
 @import "typography";
 @import "buttons";
 @import "searchBox";
@@ -97,6 +98,30 @@ $breakpoints: sm, md, lg, xl;
 
 .cin-text {
   color: $cin-primary;
+  font-family: "MonumentExtended", sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
+  &.outline {
+    -webkit-text-stroke: 2px $cin-primary;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+.leaning-tower-of-pizza {
+  font-style: italic;
+}
+
+.cin-countdown {
+  display: inline-block;
+  //background-color: white;
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: white;
+  padding: 0.15em;
+  //letter-spacing: 0.4rem;
+  //border: 2px solid $cin-primary;
 }
 
 
