--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -8,7 +8,12 @@
           <div class="col">
             <div class="display-3">
               <div class="cin-countdown">
-                <span class="cin-text leaning-tower-of-pizza">-</span><span class="cin-countdown" id="cinCountdown"></span><span class="cin-text leaning-tower-of-pizza">-</span>
+                <span class="cin-text leaning-tower-of-pizza">-</span>
+                <span class="cin-countdown" id="cinCountdownDays"></span><span class="smol">d</span>
+                <span class="cin-countdown" id="cinCountdownHours"></span><span class="smol">h</span>
+                <span class="cin-countdown" id="cinCountdownMinutes"></span><span class="smol">m</span>
+                <span class="cin-countdown" id="cinCountdownSeconds"></span><span class="smol">s</span>
+                <span class="cin-text leaning-tower-of-pizza">-</span>
               </div>
             </div>
           </div>
