diddle mobile styling

--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -17,28 +17,26 @@
               </div>
             </div>
           </div>
-          <div class="row align-items-center text-center">
-            <div class="col">
-              <h1 class="display-3">
-                <span class="cin-text outline">Candidate Interview Night</span>
-                <span class="cin-text">2020</span>
-              </h1>
-            </div>
+        </div>
+        <div class="row align-items-center text-center">
+          <div class="col">
+            <h1 class="display-3">
+              <span class="cin-text outline">Candidate Interview Night</span>
+              <span class="cin-text">2020</span>
+            </h1>
           </div>
         </div>
-        <div class="container-fluid container-padded text-center">
-          <div class="row">
-            <div class="col-md-4 align-self-center">
-              <a href="//twitter.com/{{.PageContext.MainTwitter}}"><i class="fab fa-twitter fa-2x"></i>
-                <h3>Find us on Twitter</h3></a>
-            </div>
-            <div class="col-md-4 align-self-center">
-              <h3>Join in with the conversation<br>#CIN2020</h3>
-            </div>
-            <div class="col-md-4 align-self-center">
-              <a href="//facebook.com/{{.PageContext.MainFacebook}}"><i class="fab fa-facebook fa-2x"></i>
-                <h3>Find us on Facebook</h3></a>
-            </div>
+        <div class="row align-items-center text-center">
+          <div class="col-md-4 align-self-center cin-social">
+            <a href="//twitter.com/{{.PageContext.MainTwitter}}"><i class="fab fa-twitter fa-2x"></i>
+              <h3>Find us on Twitter</h3></a>
+          </div>
+          <div class="col-md-4 align-self-center cin-social">
+            <h3>Join in with the conversation<br>#CIN2020</h3>
+          </div>
+          <div class="col-md-4 align-self-center cin-social">
+            <a href="//facebook.com/{{.PageContext.MainFacebook}}"><i class="fab fa-facebook fa-2x"></i>
+              <h3>Find us on Facebook</h3></a>
           </div>
         </div>
         {{if not .PageContext.CINLivestreaming}}
