--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -134,6 +134,12 @@ $breakpoints: sm, md, lg, xl;
   max-width: 100vw;
 }
 
+.cin-social {
+  @media screen and (max-width: map_get($grid-breakpoints, "md")) {
+    margin: 1em;
+  }
+}
+
 @media (min-width: 1600px) {
   .container {
     max-width: 1400px;
