--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -32,7 +32,7 @@
               <h3>Find us on Twitter</h3></a>
           </div>
           <div class="col-md-4 align-self-center cin-social">
-            <h3>Join in with the conversation<br>#CIN2020</h3>
+            <h3>Join in with the conversation<br><b>#CIN</b></h3>
           </div>
           <div class="col-md-4 align-self-center cin-social">
             <a href="//facebook.com/{{.PageContext.MainFacebook}}"><i class="fab fa-facebook fa-2x"></i>
