target blank some links lol

--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -28,14 +28,14 @@
         </div>
         <div class="row align-items-center text-center">
           <div class="col-md-4 align-self-center cin-social">
-            <a href="//twitter.com/{{.PageContext.MainTwitter}}"><i class="fab fa-twitter fa-2x"></i>
+            <a href="//twitter.com/{{.PageContext.MainTwitter}}" target="_blank"><i class="fab fa-twitter fa-2x"></i>
               <h3>Find us on Twitter</h3></a>
           </div>
           <div class="col-md-4 align-self-center cin-social">
             <h3>Join in with the conversation<br><b>#CIN</b></h3>
           </div>
           <div class="col-md-4 align-self-center cin-social">
-            <a href="//facebook.com/{{.PageContext.MainFacebook}}"><i class="fab fa-facebook fa-2x"></i>
+            <a href="//facebook.com/{{.PageContext.MainFacebook}}" target="_blank"><i class="fab fa-facebook fa-2x"></i>
               <h3>Find us on Facebook</h3></a>
           </div>
         </div>
